--- a/index.html
+++ b/index.html
@@ -20,24 +20,28 @@
 <body>
 	<div class="cards">
 
-			<div class="playercards" id="playerone">
-					<div class="cardheader" id="playeroneheader"></div>
-					<div class="names" id="playeronename"></div>
-					<div class="options" id="playeroneoptions"></div>
-					<div class="scores" id="playeronescores"></div>
-				</div>
-				<div class="playercards" id="playertwo">
-					<div class="cardheader" id="playertwoheader"></div>
-					<div class="names" id="playertwoname"></div>
-					<div class="options" id="playertwooptions"></div>
-					<div class="scores" id="playertwoscores"></div>
-				</div>
+		<div class="playercards" id="playerone">
+			<div class="cardheader" id="playeroneheader"></div>
+			<hr class="hr_style1" id="hrone">
+			<div class="names" id="playeronename"></div>
+			<hr class="hr_style2" id="hrtwo">
+			<div class="options" id="playeroneoptions"></div>
+			<hr class="hr_style2" id="hrthree">
+			<div class="scores" id="playeronescores"></div>
+		</div>
+		<div class="playercards" id="playertwo">
+			<div class="cardheader" id="playertwoheader"></div>
+			<hr class="hr_style1" id="hrfour">
+			<div class="names" id="playertwoname"></div>
+			<hr class="hr_style2" id="hrfive">
+			<div class="options" id="playertwooptions"></div>
+			<hr class="hr_style2" id="hrsix">
+			<div class="scores" id="playertwoscores"></div>
+		</div>
 	</div>
 
 	<div class="chat" id="chatid">
-		<div class="chat_display">
-
-		</div>
+		<div class="chat_display"></div>
 		<form onSubmit="chatForm()">
 			<input class="chat_input"></input>
 			<button>send</button>
